# Physics_simulator

./: .gitignore  CMakeLists.txt  README.md  build_and_run.sh  build_run_commands.txt
c_core/: CMakeLists.txt
c_core/include/physmath/: calculus.h  mat3.h  ode.h  physmath.h  vec3.h
c_core/src/: calculus.c  linear_algebra.c  mat3.c  ode.c  vec3.c
cpp_engine/: CMakeLists.txt
cpp_engine/include/physengine/: PhysicsWorld.hpp  RigidBody.hpp  SpatialHash.hpp  Vec3.hpp
cpp_engine/include/physengine/integrators/: RK4Integrator.hpp
cpp_engine/include/physengine/scenes/: BaseScene.hpp  BouncingBallsScene.hpp  DoublePendulumScene.hpp  FallingBallsScene.hpp  PendulumScene.hpp  ProjectileScene.hpp
cpp_engine/jni/: PhysicsJNI.cpp
cpp_engine/src/: PhysicsWorld.cpp  RigidBody.cpp  main_demo.cpp
cpp_engine/src/integrators/: RK4Integrator.cpp
cpp_engine/src/scenes/: BaseScene.cpp  BouncingBallsScene.cpp  DoublePendulumScene.cpp  FallingBallsScene.cpp  PendulumScene.cpp  ProjectileScene.cpp
java_app/: build.gradle
java_app/src/main/java/com/physics/sim/: Main.java  MainApp.java  TestJNI.java
java_app/src/main/java/com/physics/sim/nativebridge/: NativePhysicsWorld.java
tests/: CMakeLists.txt
tests/c_core/: CMakeLists.txt  test_physmath.cpp
tests/cpp_engine/: CMakeLists.txt  test_physics_world.cpp
